# container-images

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  .snyk  .yamllint  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  REUSE.toml  SECURITY.md  pyproject.toml
.claude/rules/: git-workflow.md
.github/: dependabot.yml
.github/workflows/: claude-baseline-review.yml  codeql.yml  dependency-review.yml  mirror-hardened-images.yml  pr-validation.yml  publish-approved-image.yml  reuse.yml  scorecard.yml  security-analysis.yml  supply-chain-mirror.yml  validate-catalog-schema.yml
.qlty/: logs  out  plugin_cachedir  qlty.toml  results
catalog/: approved-lock.yaml  images.yaml  policies.yaml
docs/diagrams/: README.md  mirror-hardened-images.puml  overview.puml  publish-approved-image.puml  validate-catalog-schema.puml
docs/superpowers/plans/: robust-gliding-island.md
scripts/: build_matrix.py  load_scanner_policy.py  update_approved_lock.py  validate_catalog_schema.py  verify_approved_lock.py
tests/: test_build_matrix.py  test_load_scanner_policy.py  test_update_approved_lock.py  test_validate_catalog_schema.py  test_verify_approved_lock.py
tests/fixtures/: valid_catalog.yaml
