[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "container-images-tools"
version = "0.1.0"
description = "Catalog validation and matrix builder for the container-images mirror"
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = ["pyyaml>=6.0.3"]

[dependency-groups]
dev = ["pytest>=8.3.0", "pip-audit>=2.9.0"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.hatch.build.targets.wheel]
packages = ["scripts"]
